minor css fix: body had a scrollbar in SimpleMDE view. unclear why.

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,4 +4,5 @@ html, body {
     height: 100%;
     font-family: sans-serif;
     font-size: 14px;
+    overflow: auto;
 }
